--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -66,9 +66,8 @@ http {
     ssl_session_cache off;
     ssl_protocols TLSv1.3;
     access_log off;
-    root /data/wuweichao/codes/tls-benchmark/data;
-    ssl_certificate /data/wuweichao/codes/tls-benchmark/certs/www.example.org.cert.pem;
-    ssl_certificate_key /data/wuweichao/codes/tls-benchmark/certs/www.example.org.key.pem;
+    ssl_certificate ../../../certs/www.example.org.cert.pem;
+    ssl_certificate_key ../../../certs/www.example.org.key.pem;
     
     server {
         listen 4441 backlog=65536 reuseport default ssl;
