--- a/.gitmodules
+++ b/.gitmodules
@@ -2,11 +2,14 @@
 	path = nginx
 	url = https://github.com/nginx/nginx.git
 	branch = master
+	ignore = dirty
 [submodule "rustls-openssl-compat"]
 	path = rustls-openssl-compat
 	url = https://github.com/rustls/rustls-openssl-compat.git
 	branch = main
+	ignore = dirty
 [submodule "openssl-3.3.3"]
 	path = openssl-3.3.0
 	url = https://github.com/openssl/openssl.git
 	branch = master
+	ignore = dirty
