--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -2,10 +2,9 @@ user root root;
 worker_processes auto;
 worker_cpu_affinity auto;
 worker_rlimit_nofile 65536;
-#error_log /data/wuweichao/codes/tls-benchmark/output/nginx/logs/error.log debug;
 worker_rlimit_core 2048M;
 worker_shutdown_timeout 10m;
-
+master_process off;
 events {
     worker_connections  65536;
     use epoll;
@@ -62,7 +61,7 @@ http {
     # SSL
     ##
     ssl_prefer_server_ciphers on;
-    ssl_ciphers ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256;
+    # ssl_ciphers ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256;
     ssl_session_cache off;
     ssl_protocols TLSv1.3;
     access_log off;
